fixes on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,9 @@
     padding: 0;
     overscroll-behavior: none;
     -webkit-overflow-scrolling: touch;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
   }
 
   #__next {
